--- a/src/style.css
+++ b/src/style.css
@@ -1,8 +1,50 @@
 /* #content {
   color: red;
 } */
-
-.hello {
-  color: blue;
-  /* background: url("./assets/images/Enchiladas.jpg"); */
+:root {
+  font-size: 1.5rem;
+  background-color: grey;
 }
+
+#content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.header {
+  position: relative;
+  color: black;
+  /* background: url("./assets/images/Enchiladas.jpg"); */
+  width: 1100px;
+  /* height: 500px; */
+
+  text-align: center;
+}
+
+.header h1 {
+  font-size: 2.6rem;
+  position: absolute;
+  top: 40%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.header img {
+  width: 100%;
+  height: 100%;
+}
+
+/* nav {
+  align-self: center;
+} */
+
+button {
+  width: 150px;
+  height: 40px;
+  border: solid black 1px;
+  border-radius: 12px;
+}
+
+/* footer {
+  align-self: center;
+} */
