--- a/src/style.css
+++ b/src/style.css
@@ -3,19 +3,44 @@
 } */
 :root {
   font-size: 1.5rem;
-  background-color: grey;
+  background-color: #1b1b1b;
+  color: rgb(255, 255, 255);
+  display: flex;
+  justify-content: center;
+}
+
+p {
+  color: rgb(172, 172, 172);
+}
+
+nav {
+  display: flex;
+  justify-content: center;
+  padding: 100px 0 150px;
+  gap: 25px;
+}
+button {
+  width: 150px;
+  height: 40px;
+  border: solid black 1px;
+  border-radius: 4px;
+  background-color: rgb(189, 1, 1);
+  color: rgb(255, 255, 255);
+  font-size: 0.9rem;
 }
 
 #content {
+  width: 1500px;
   display: flex;
   flex-direction: column;
   align-items: center;
+  background-color: #1b1b1b;
 }
 .header {
   position: relative;
-  color: black;
+  color: rgb(255, 255, 255);
   /* background: url("./assets/images/Enchiladas.jpg"); */
-  width: 1100px;
+  /* width: 1100px; */
   /* height: 500px; */
 
   text-align: center;
@@ -34,28 +59,112 @@
   height: 100%;
 }
 
-/* nav {
-  align-self: center;
-} */
-
-button {
-  width: 150px;
-  height: 40px;
-  border: solid black 1px;
-  border-radius: 12px;
-}
-
 .main {
-  background-color: blueviolet;
+  background-color: #1b1b1b;
+  padding: 0 50px;
+  width: 100%;
 }
 
 .section-title {
-  text-align: center;
-}
-.container {
+  /* text-align: center; */
   display: flex;
+  align-items: center;
+  font-size: 2rem;
+  color: rgb(189, 1, 1);
+  padding: 0 100px;
+}
+
+.section-title::after,
+.section-title::before {
+  content: "";
+  flex: 1;
+  margin: 1rem;
+  height: 2px;
+  background-color: rgb(189, 1, 1);
+}
+.subsection-title {
+  text-align: center;
+  font-size: 1.5rem;
+  color: rgb(189, 1, 1);
+}
+.home-container {
+  padding-top: 100px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.subcontainer {
+  height: 800px;
+  padding: 0 25px;
+  width: 35ch;
+}
+
+.subcontainer img {
+  border-radius: 50%;
+}
+
+.menu-nav {
+  display: flex;
+  justify-content: center;
+  padding: 30px 0;
+  gap: 25px;
 }
 .menu-heading {
   display: flex;
   justify-content: space-between;
+}
+
+.item-info {
+  color: rgb(172, 172, 172);
+}
+
+.contact-container {
+  display: flex;
+  justify-content: center;
+  padding: 0 100px;
+  gap: 100px;
+}
+
+form {
+  width: 500px;
+}
+
+input,
+textarea {
+  background-color: #1b1b1b;
+  border: 2px solid rgb(255, 255, 255);
+  border-radius: 4px;
+  width: 100%;
+  height: 40px;
+  margin-bottom: 30px;
+  color: rgb(172, 172, 172);
+}
+
+input:hover::placeholder {
+  color: rgb(189, 1, 1);
+}
+
+textarea {
+  height: 200px;
+}
+
+.contact-container .subcontainer {
+  width: 500px;
+}
+
+.contact-title {
+  font-size: 1.1rem;
+}
+
+#contact-number {
+  font-size: 1.1rem;
+  color: rgb(189, 1, 1);
+}
+
+form button {
+  width: 100%;
+
+  height: 50px;
+  /* border-radius: 4px; */
 }
