--- a/src/style.css
+++ b/src/style.css
@@ -30,7 +30,7 @@ button {
 }
 
 #content {
-  width: 1500px;
+  width: 1600px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -42,7 +42,7 @@ button {
   /* background: url("./assets/images/Enchiladas.jpg"); */
   /* width: 1100px; */
   /* height: 500px; */
-
+  width: 1600px;
   text-align: center;
 }
 
@@ -56,12 +56,11 @@ button {
 
 .header img {
   width: 100%;
-  height: 100%;
 }
 
 .main {
   background-color: #1b1b1b;
-  padding: 0 50px;
+  /* padding: 0 50px; */
   width: 100%;
 }
 
@@ -71,7 +70,7 @@ button {
   align-items: center;
   font-size: 2rem;
   color: rgb(189, 1, 1);
-  padding: 0 100px;
+  /* padding: 0 100px; */
 }
 
 .section-title::after,
@@ -102,6 +101,7 @@ button {
 
 .subcontainer img {
   border-radius: 50%;
+  width: 100%;
 }
 
 .menu-nav {
@@ -122,7 +122,7 @@ button {
 .contact-container {
   display: flex;
   justify-content: center;
-  padding: 0 100px;
+  /* padding: 0 100px; */
   gap: 100px;
 }
 
@@ -167,4 +167,62 @@ form button {
 
   height: 50px;
   /* border-radius: 4px; */
+}
+
+/* Mobile utility class */
+/* .container {
+  width: 100%;
+  margin-left: auto;
+  margin-right: auto;
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
+  border: 1px solid red;
+} */
+
+/* Desktop Utility Class */
+.container {
+  max-width: 1536px;
+  margin-left: auto;
+  margin-right: auto;
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
+  border: solid 2px blue;
+}
+@media (max-width: 1690px) {
+  .container {
+    max-width: 1300px;
+  }
+}
+
+@media (max-width: 1330px) {
+  .container {
+    max-width: 1100px;
+  }
+}
+
+@media (max-width: 1140px) {
+  .container {
+    max-width: 860px;
+  }
+}
+
+@media (max-width: 900px) {
+  .container {
+    max-width: 650px;
+  }
+  .home-container {
+    flex-direction: column;
+  }
+}
+
+@media (max-width: 690px) {
+  .container {
+    max-width: 490px;
+  }
+}
+
+@media (max-width: 520px) {
+  .container {
+    max-width: 420px;
+  }
 }
